[gd_scene load_steps=3 format=3 uid="uid://dlb5m8x7nj4k2"]

[ext_resource type="Script" path="res://Scripts/UI/LimitBreakUI.gd" id="1_lbui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_charge"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.9, 0.3, 0.1, 1)

[node name="LimitBreakUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 80.0
script = ExtResource("1_lbui")

[node name="ChargeBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 30.0
theme_override_styles/background = SubResource("StyleBoxFlat_charge")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
max_value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="ChargeBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -12.0
offset_right = 60.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "LIMIT BREAK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 290.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "READY! Press SPACE to activate!"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 290.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 0.9, 0, 1)
theme_override_font_sizes/font_size = 18
text = "10.0s"
horizontal_alignment = 1

[node name="ActiveOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.5, 0, 0.2)
